@@ -1,0 +1,301 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u6587\u5b78\u754c\u65b0\u661f\uff01\u97d3\u570b\u4f5c\u5bb6\u97d3\u6c5f\u52c7\u596a\u8afe\u8c9d\u723e\u6587\u5b78\u734e\uff0c\u63ed\u958b\u5979\u50b3\u5947\u7684\u4e00\u751f", "description": "\u6587\u5b78\u754c\u65b0\u661f\uff01\u97d3\u570b\u4f5c\u5bb6\u97d3\u6c5f\u52c7\u596a\u8afe\u8c9d\u723e\u6587\u5b78\u734e\uff0c\u63ed\u958b\u5979\u50b3\u5947\u7684\u4e00\u751f", "url": "https://www.famechos.me/news/\u6587\u5b78\u754c\u65b0\u661f\uff01\u97d3\u570b\u4f5c\u5bb6\u97d3\u6c5f\u52c7\u596a\u8afe\u8c9d\u723e\u6587\u5b78\u734e\uff0c\u63ed\u958b\u5979\u50b3\u5947\u7684\u4e00\u751f.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-13T13:14:13.153565+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/文學界新星！韓國作家韓江勇奪諾貝爾文學獎，揭開她傳奇的一生.html"/>
+<meta name="description" content="韓國作家韓江勇奪諾貝爾文學獎，揭開她傳奇的一生。深入了解這位文學界新星的成就與貢獻。">
+
+<meta name="keywords" content="韓江、諾貝爾文學獎、韓國作家、文學界新星、傳奇作家">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/文學界新星！韓國作家韓江勇奪諾貝爾文學獎，揭開她傳奇的一生.html" />
+        <meta property="og:title" content="文學界新星！韓國作家韓江勇奪諾貝爾文學獎，揭開她傳奇的一生" />
+        <meta property="og:description" content="文學界新星！韓國作家韓江勇奪諾貝爾文學獎，揭開她傳奇的一生" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="文學界新星！韓國作家韓江勇奪諾貝爾文學獎，揭開她傳奇的一生" />
+        <meta property="twitter:description" content="文學界新星！韓國作家韓江勇奪諾貝爾文學獎，揭開她傳奇的一生" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <a href="https://www.famechos.me/"><img class="famechos-logo" src="../img/famechos_logo.png"></a>
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button></a>
+  
+        </div>
+        <div class="nav-type-2 nav-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button></a>
+  
+        </div>
+        <div class="nav-type-3 nav-type"><a href="https://www.famechos.me/drama.html">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button></a>
+          
+        </div>
+        <div class="nav-type-4 nav-type"><a href="https://www.famechos.me/others.html">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button></a>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer"><a href="https://www.famechos.me/about_us.html">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button></a>
+        </div>
+        <div class="nav-setting"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button></a>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type"><a href="https://www.famechos.me/drama.html">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type"><a href="https://www.famechos.me/others.html">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type"><a href="https://www.famechos.me/about_us.html">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button></a>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>文學界新星！韓國作家韓江勇奪諾貝爾文學獎，揭開她傳奇的一生</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">13/10/2024</p>
+        </div>
+	<p>韓國作家韓江獲得諾貝爾文學獎，以下是她的生平重大事件時間表：</p>
+<ul>
+<li>1970年11月27日：韓江出生於光州。</li>
+<li>1988年：畢業於風門女子高中。</li>
+<li>1989年：進入延世大學韓國語文學系。</li>
+<li>1993年：畢業於延世大學韓國語文學系，以五首詩作在《文學與社會》季刊上首次亮相。</li>
+<li>1994年：憑藉短篇小說《紅錨》贏得首爾新聞日報主辦的文學比賽，首次以小說家身份出道。</li>
+<li>1995年：出版中篇小說集《麗水之戀》。</li>
+<li>1998年：出版長篇小說《黑鹿》。</li>
+</ul><ul>
+<li>1999年：出版中篇小說《嬰兒佛陀》，並獲得第25屆韓國小說獎。</li>
+<li>2000年：出版中篇小說集《我的女人之果》，並獲得文化體育觀光部頒發的今日青年藝術家獎。</li>
+<li>2002年：出版中篇小說《我的名字是向日葵》和長篇小說《你的冷手》。</li>
+<li>2003年：出版散文集《愛情和愛情周圍的事物》和中篇小說《紅花故事》。</li>
+<li>2005年：獲得李箱文學獎大獎。</li>
+</ul>
+<h2>韓江的文學創作歷程</h2>
+<p>韓江在2007年出版了散文集《平靜地唱首歌》，並推出了短篇小說《雷電小精靈》和小說《素食者》。同年，她被任命為創意寫作教授。</p>
+<p>以下是韓江的寫作生涯大事記：</p>
+<ul>
+<li>2008年：出版短篇小說《眼淚盒》</li>
+<li>2010年：出版小說《風吹起來，走吧》</li>
+<li>2011年：出版小說《希臘課程》</li>
+<li>2012年：出版中篇小說集《黃色花紋的永恆》</li>
+<li>2013年：出版詩集《我把晚餐放在抽屜裡》</li>
+<li>2014年：出版小說《人類行為》</li>
+<li>2015年：榮獲黃善元文學獎</li>
+</ul><ul>
+<li>2016年：出版小說《白色書》，並憑藉《素食者》榮獲布克國際獎。</li>
+<li>2017年：榮獲意大利馬拉帕蒂文學獎。</li>
+<li>2018年：榮獲金裕貞文學獎和西班牙圣克莱门特文学奖，並從教授職位退休。</li>
+<li>2019年：出版小說《我們不分離》。</li>
+<li>2023年：榮獲法國梅第奇最佳外國小說獎。</li>
+</ul>
+<h2>韓江於2024年榮獲Ho-Am藝術獎</h2>
+<p>韓江於2024年獲得Ho-Am藝術獎的殊榮。</p>
+<h2>諾貝爾文學獎落戶韓江</h2>
+<p>韓江在2024年榮獲諾貝爾文學獎，成為文學界的焦點。</p>
+<h2>粉絲要求拍照卻遭到毆打，受害者是rapper歌手扈賢珠的支持者</h2>
+<p>據報導，rapper歌手扈賢珠的粉絲在要求拍照後遭到毆打，引起爭議。</p>
+<h2>金與正發出警告：再有南韓無人機入侵將招致災難</h2>
+<p>北韓領導人金正恩的妹妹金與正警告，若再發現南韓無人機將會引發災難，局勢緊張。</p>
+<h2>南韓遭北韓發射20個垃圾氣球襲擊</h2>
+<p>據韓國聯合參謀本部（JCS）報導，北韓向南韓發射20個垃圾氣球，引起南韓的關注。</p>
+<h2>平壤遭無人機飛越？北韓媒體點名首爾是幕後黑手</h2>
+<p>北韓媒體報導，首爾曾派無人機飛越平壤，引起北韓的抗議。</p><h2>南韓-美國-日本峰會預計2024年底舉行</h2>
+<p>據國家安全顧問報導，南韓-美國-日本峰會預計於2024年底舉行。</p>
+
+<p>資料來源：Yonhap News Agency</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/SaJjB3-cUNU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/健身房業主注意！未付版權費恐遭五年徒刑或5000萬韓元罰款，韓國音樂著作權協會喊停法律行動.html">健身房業主注意！未付版權費恐遭五年徒刑或5000萬韓元罰款，韓國音樂著作權協會喊停法律行動</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/YG娛樂新人女團BABYMONSTER 7個月內再度出擊！11月發行首張正規專輯《Drip》，權志龍參與創作主打歌.html">YG娛樂新人女團BABYMONSTER 7個月內再度出擊！11月發行首張正規專輯《Drip》，權志龍參與創作主打歌</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/睽違8年！朴宰范推出經典R&B專輯《The One You Wanted》，20首歌曲打造驕傲之作.html">睽違8年！朴宰范推出經典R&B專輯《The One You Wanted》，20首歌曲打造驕傲之作</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <a href="https://www.famechos.me/"><img class="famechos-logo-footer" src="../img/famechos_logo.png"></a>
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <a href="https://www.famechos.me/k-pop.html"><p class="footer-text">K-POP</p></a>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <a href="https://www.famechos.me/j-pop.html"><p class="footer-text">J-POP</p></a>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <a href="https://www.famechos.me/drama.html"><p class="footer-text">影視</p></a>
+        </div>
+        <div class="other-footer-box footer-box">
+          <a href="https://www.famechos.me/others.html"><p class="footer-text">其他</p></a>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
