@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sun, 13 Oct 2024 13:12:00 +0800</lastBuildDate>
+  <lastBuildDate>Sun, 13 Oct 2024 13:14:26 +0800</lastBuildDate>
 
   <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
@@ -171,5 +171,11 @@ YG娛樂旗下的新人女團BABYMONSTER（韓語：베이비몬스터）將於1
   <description>&lt;h2&gt;韓寒獲諾貝爾文學獎後，作品在韓國網路書店熱銷&lt;/h2&gt;。...</description>
   <category>K-Pop</category>
   <pubDate>Sun, 13 Oct 2024 13:12:00 +0800</pubDate>
+</item><item>
+  <title>文學界新星！韓國作家韓江勇奪諾貝爾文學獎，揭開她傳奇的一生</title>
+  <link>https://www.famechos.me/news/文學界新星！韓國作家韓江勇奪諾貝爾文學獎，揭開她傳奇的一生.html</link>
+  <description>&lt;h2&gt;韓江的生平大事記&lt;/h2&gt;。。韓國作家韓江獲得諾貝爾文學獎，以下是她的生平重大事件時間表：。。&lt;ul&gt;...</description>
+  <category>K-Pop</category>
+  <pubDate>Sun, 13 Oct 2024 13:14:26 +0800</pubDate>
 </item></channel>
 </rss>
