@@ -170,4 +170,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/文學界新星！韓國作家韓江勇奪諾貝爾文學獎，揭開她傳奇的一生.html</ns0:loc>
+    <ns0:lastmod>2024-10-13T13:14:26+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
