@@ -25,3 +25,4 @@ https://www.koreaherald.com/view.php?ud=20241007050635
 https://www.koreaherald.com/view.php?ud=20241002050690
 https://www.koreaherald.com/view.php?ud=20241008050463
 https://www.koreaherald.com/view.php?ud=20241008050665
+https://en.yna.co.kr/view/AEN20241011007100315?section=culture/k-pop&input=rss
